[package]
name = "gladis"
version = "1.0.0"
authors = ["Romain Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Easily import Glade-generated UI files into Rust code."
readme = "README.md"
keywords = ["gui", "gtk", "gtk-rs", "gnome", "glade"]
categories = ["gui"]
repository = "https://github.com/MicroJoe/gladis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gladis_proc_macro = { version = "1.0.0", optional = true, path = "../gladis_proc_macro" }
gtk = "0.14.*"

[dev-dependencies]
gladis_proc_macro = { version = "1.0.0", path = "../gladis_proc_macro" }
gio = "0.14.*"

[features]
default = ["derive"]
derive = ["gladis_proc_macro"]
