# SPDX-FileCopyrightText: 2021 Agathe Porte <microjoe@microjoe.org>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gladis"
version = "1.0.2-alpha.0"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Easily import Glade-generated UI files into Rust code."
readme = "README.md"
keywords = ["gui", "gtk", "gtk-rs", "gnome", "glade"]
categories = ["gui"]
repository = "https://github.com/MicroJoe/gladis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gladis_proc_macro = { version = "1.0.2-alpha.0", optional = true, path = "../gladis_proc_macro" }
gtk = "0.15"

[dev-dependencies]
gladis_proc_macro = { version = "1.0.2-alpha.0", path = "../gladis_proc_macro" }
gio = "0.15"

# Relm example
relm = "0.23"
relm-derive = "0.23"

[features]
default = ["derive"]
derive = ["gladis_proc_macro"]
